--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -697,42 +697,57 @@
     "Role.commandingOfficer": "Командир",
 
     "Role.commandingOfficer.description": "Капитан.\nДаже если командир не в звании капитана, подчинённые будут называть его капитаном. Командир должен быть у каждого корабля.",
+    "Role.commandingOfficer.ability": "Командир может передать балл Целеустремлённости другому персонажу, с которым может общаться. Не связано с Ценностью.",
 
     "Role.executiveOfficer": "Старший помощнник",
 
     "Role.executiveOfficer.description": "Заместитель командира. Старший помощник - главный советник капитана и принимает командование в случае его недееспособности. Если у корабля\n нет специально назначенного старшего помощника,\n им лучше назначить офицера, находящегося на другой должности, без дополнительных преимуществ\n должности старпома",
+    "Role.executiveOfficer.ability": "Когда другой персонаж, который может общаться со старшим помощником, тратит балл Целеустремлённости, старший помощник может потратить 3 жетона Импульса (Мгновенное применение) и восстановить ему потраченный балл Целеустремлённости.",
 
     "Role.operationsManager": "Глава оперативной службы",
 
     "Role.operationsManager.description": "Глава оперативной службы отвечает за все технические операции, совершаемые на борту или с участием корабля, как правило, с поста оперативной службы на мостике или находясь во взаимодействии с главным инженером (на небольших кораблях один офицер может занимать обе должности). Он также часто принимает на себя обязанности научного офицера, если такового нет среди старшего состава экипажа.",
+    "Role.operationsManager.ability": "Успешно выполнив Задачу с Помощью трикодера, Компьютеров или Сенсоров звездолёта, глава оперативной службы получает 1 дополнительный жетон Импульса, который может потратить по правилу «Получить информацию».",
 
     "Role.chiefEngineer": "Главный инженер",
 
     "Role.chiefEngineer.description": "Главный инженер отвечает за работоспособность\n и функционирование корабля и руководит инженерной службой на его борту.",
+    "Role.chiefEngineer.ability": "Находясь на звездолёте, он даёт Преимущество «Инженерная служба», как если бы звездолёт был полностью укомплектован инженерами и техниками.",
 
     "Role.chiefOfSecurity": "Начальник службы безопасности",
 
     "Role.chiefOfSecurity.description": "Этот офицер управляет службой и несёт ответственность за корабль и экипаж\nво время миссий, расследует дисциплинарные проступки и уголовные дела, а также обеспечивает защиту важных лиц на борту. На многих кораблях работает за тактическим постом на мостике.",
+    "Role.chiefOfSecurity.ability": "Находясь на борту звездолёта, он всегда получает Преимущество «Отряд службы безопасности», как если бы звездолёт был полностью  комплектован сотрудниками службы безопасности.",
 
     "Role.chiefMedicalOfficer": "Главный медицинский офицер",
 
     "Role.chiefMedicalOfficer.description": "Главный медицинский офицер, также судовой хирург или главный врач; отвечает за здоровье и благополучие экипажа и других лиц, находящихся на борту, и руководит медицинской службой. Может приказывать старшим офицерам и отменять их приказы, если речь идёт об их здоровье.",
+    "Role.chiefMedicalOfficer.ability": "Находясь на борту звездолёта, главный медицинский офицер всегда получает Преимущество «Медицинская служба».",
 
     "Role.scienceOfficer": "Научный офицер",
 
     "Role.scienceOfficer.description": "Отвечает за консультирование командира по всем научным вопросам и предоставляет гипотезы о неизвестных  явлениях. Не на всех кораблях есть  специальный научный офицер, и часто его обязанности выполняет глава оперативной службы.",
+    "Role.scienceOfficer.ability": "Успешно выполнив Задачу с Помощью трикодера или Компьютеров или Сенсоров корабля, он получает 1 дополнительный жетон Импульса, который  можно применить только чтобы «Получить информацию».",
 
     "Role.flightController": "Главный навигатор",
 
     "Role.flightController.description": "Не самая типичная для старших офицеров должность. Некоторые капитаны, особенно действующие\n в неизведанном космосе, назначают старшим офицером также главного рулевого или офицера-навигатора.",
+    "Role.flightController.ability": "Если он изучает или чинит любые устройства, связанные с полётом или системами двигателя, то может использовать Навигацию вместо Инженерии.",
 
     "Role.shipsCounselor": "Корабельный советник",
 
     "Role.shipsCounselor.description": "На больших кораблях и звёздных базах есть персонал, занимающийся психологической поддержкой. Некоторые капитаны считают их ценными советниками, поскольку их обучение охватывает как культуру, так и психологию, что позволяет им точно считывать чужие настроения и намерения.",
+    "Role.shipsCounselor.ability": "Когда корабельный советник успешно выполняет Задачу по определению эмоционального состояния или намерений другого живого существа, он получает 1 дополнительный жетон Импульса, который можно применить только чтобы «Получить информацию».",
 
     "Role.communicationsOfficer": "Офицер связи",
 
     "Role.communicationsOfficer.description": "Чаще встречающиеся в более ранние годы существования Звёздного флота узкоспециализированные офицеры связи владеют языками\n и криптографией, используют передовые технологии\n перевода и расшифровки и важны как при встрече с новыми, так и с враждебными цивилизациями.",
+    "Role.communicationsOfficer.ability": "Если сложность Задачи выполняемой офицером связи увеличивается из-за нового языка или шифра, то увеличение сложности можно проигнорировать.",
+
+    "Role.admiral": "Адмирал",
+
+    "Role.admiral.description": "Только флагманы",
+    "Role.admiral.ability": "Выберите три дополнительные Специализации, отражающие область знаний или предметы, относящиеся к заданию адмирала. В начале каждой миссии адмирал выбирает одну из трех Специализаций и каждый главный герой получает ее в качестве дополнительного Специализации для миссии, благодаря дополнительным инструктажам и учебным ресурсам.",
 
     "ShipBuildType.pod.name": "Челнок",
 
