minor additional tweaks to paragraphs; fix a mistake from the translation spreadsheet

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -642,7 +642,7 @@
     "CareerEvent.common.16.description": "During a survey mission, the character discovered a device or fragment of technology from a now-extinct civilization.\n\n- What did this piece of technology do? Does it still function now?\n- What is known about the civilization that made it?",
     "CareerEvent.common.16.focusSuggestion": "The character gains a Focus, reflecting the event and its aftermath. Examples include: Ancient Technology, Computers, Reverse Engineering.",
 
-    "CareerEvent.common.17.name": "Принятие командования",
+    "CareerEvent.common.17.name": "Special Commendation",
     "CareerEvent.common.17.description": "During a crisis, the character saved the lives of several colleagues, helping them to safety.This earned the character a special commendation.\n\n- What was the crisis? Why was the mission in danger?\n- What were the repercussions of this? Are the details of this event on record?",
     "CareerEvent.common.17.focusSuggestion": "The character gains a Focus, reflecting the event and its aftermath. Examples include: Athletics, Survival, or Emergency Medicine.",
 
