--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -1300,6 +1300,11 @@
     "Role.admiral.description": "Flag Officers only.",
     "Role.admiral.ability": "Select three additional Focuses, reflecting areas of expertise or subjects that pertain to the admiral’s assignment. At the start of each mission, the admiral chooses one of their three Focuses, and every Main Character receives that as an additional Focus for the mission, due to additional briefings and instructional resources.",
 
+    "Role.navigator": "Navigator",
+
+    "Role.navigator.description": "Not a typical senior staff role, some captains, particularly those operating in uncharted space, choose the most senior navigator to serve as senior staff as well.",
+    "Role.navigator.ability": "When the navigator is required to analyze, or repair technology related to flight or propulsion, they may use the Conn Discipline instead of Engineering.",
+
     "Sheet.basicGeneratedHalfPageCharacterSheet": "New Half-Page 2nd Ed.-style Character Sheet",
     "Sheet.halfPageSupportingCharacterSheet": "Half-Page Supporting Character Sheet",
     "Sheet.landscapeGeneratedCharacterSheet": "TNG Landscape Character Sheet (US-Letter)",
@@ -1680,6 +1685,8 @@
     "StarSystem.common.noWorlds": "No worlds",
     "StarSystem.common.primaryStar": "Primary Star",
     "StarSystem.common.companionStar": "Companion Star",
+
+    "Talent.text.rank": "{{talentName}} [Rank: {{rank}}]",
 
     "Talent.ablativeArmor": "Ablative Armor",
 
