Add a new 2e-inspired design for starships

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -425,6 +425,7 @@
     "Construct.other.careerEvents": "Career Events",
     "Construct.other.characterType": "Character Type",
     "Construct.other.crew": "Crew",
+    "Construct.other.crewSupport": "Crew Support",
     "Construct.other.department": "Department",
     "Construct.other.departments": "Departments",
     "Construct.other.determination": "Determination",
@@ -441,6 +442,8 @@
     "Construct.other.focuses": "Focuses",
     "Construct.other.injuries": "Injuries",
     "Construct.other.job": "Job",
+    "Construct.other.launchYear": "Launch Year",
+    "Construct.other.missionPod": "Mission Pod",
     "Construct.other.missionProfile": "Mission Profile",
     "Construct.other.name": "Name",
     "Construct.other.pastimes": "Pastimes",
@@ -470,6 +473,7 @@
     "Construct.other.talent": "Talent",
     "Construct.other.talents": "Talents",
     "Construct.other.talentOptions": "Talent Options",
+    "Construct.other.timeline": "Timeline",
     "Construct.other.training": "Training",
     "Construct.other.trait": "Trait",
     "Construct.other.traits": "Traits",
